Changed table and path names (loginTable -> users, foodTable -> food, foodlist -> food, login -> users)
