# backend/api/openapi.yaml
@@ -100,7 +100,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnexpectedError'
 
-  /foodlist:
+  /food:
     get:
       security:
         - bearerAuth: []
@@ -146,7 +146,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnexpectedError'
 
-  /foodlist/{id}:
+  /food/{id}:
     put:
       security:
         - bearerAuth: []
